--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="bower_components/jqueryui/themes/ui-darkness/jquery-ui.css">
         <link rel="stylesheet" href="components/codemirror-3.21/lib/codemirror.css">
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
         <!-- endbuild -->
 </head>
     <body>
