--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,9 @@
         <script src="bower_components/ember-data/ember-data.js"></script>
         <script src="bower_components/ember-localstorage-adapter/localstorage_adapter.js"></script>
         <script src="components/codemirror-3.21/lib/codemirror.js"></script>
+        <script src="components/codemirror-3.21/lib/codemirror.js"></script>
+        <script src="components/codemirror-3.21/lib/addon/closebrackets.js"></script>
+        <script src="components/codemirror-3.21/lib/addon/matchbrackets.js"></script>
         <!-- endbuild -->
 
         <!-- build:js(.tmp) scripts/templates.js -->
