--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
         <script src="components/codemirror-3.21/lib/codemirror.js"></script>
         <script src="components/codemirror-3.21/lib/addon/closebrackets.js"></script>
         <script src="components/codemirror-3.21/lib/addon/matchbrackets.js"></script>
+        <script src="components/codemirror-3.21/lib/language/javascript.js"></script>
         <!-- endbuild -->
 
         <!-- build:js(.tmp) scripts/templates.js -->
