--- a/app/index.html
+++ b/app/index.html
@@ -28,11 +28,11 @@
         <!-- endbuild -->
 
         <!-- build:js(.tmp) scripts/templates.js -->
-        <script src="scripts/compiled-templates.js"></script>
+        <script src="assets/compiled-templates.js"></script>
         <!-- endbuild -->
 
         <!-- build:js(.tmp) scripts/main.js -->
-        <script src="scripts/combined-scripts.js"></script>
+        <script src="assets/combined-scripts.js"></script>
         <!-- endbuild -->
 
     </body>
