--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="bower_components/jqueryui/themes/ui-darkness/jquery-ui.css">
         <link rel="stylesheet" href="components/codemirror-3.21/lib/codemirror.css">
+        <link rel="stylesheet" href="components/codemirror-3.21/lib/addon/lint/lint.css">
+        <link rel="stylesheet" href="components/codemirror-3.21/lib/addon/hint/show-hint.css">
         <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
         <!-- endbuild -->
 </head>
@@ -24,6 +26,11 @@
         <script src="components/codemirror-3.21/lib/codemirror.js"></script>
         <script src="components/codemirror-3.21/lib/addon/closebrackets.js"></script>
         <script src="components/codemirror-3.21/lib/addon/matchbrackets.js"></script>
+        <script src="components/codemirror-3.21/lib/addon/hint/jshint.js"></script>
+        <script src="components/codemirror-3.21/lib/addon/hint/javascript-hint.js"></script>
+        <script src="components/codemirror-3.21/lib/addon/hint/show-hint.js"></script>
+        <script src="components/codemirror-3.21/lib/addon/lint/javascript-lint.js"></script>
+        <script src="components/codemirror-3.21/lib/addon/lint/lint.js"></script>
         <script src="components/codemirror-3.21/lib/language/javascript.js"></script>
         <!-- endbuild -->
 
