--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
 
         <!-- build:js(app) scripts/components.js -->
         <script src="bower_components/jquery-ember/jquery.js"></script>
+        <script src="bower_components/jszip/dist/jszip.min.js"></script>
+        <script src="bower_components/FileSaver.js/FileSaver.min.js"></script>
         <script src="bower_components/jqueryui/ui/jquery-ui.js"></script>
         <script src="bower_components/handlebars/handlebars.js"></script>
         <script src="bower_components/ember/ember.js"></script>
